--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "dotenv": "^16.3.1",
     "prisma": "^5.3.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.3.0",
     "fastify": "^4.23.1",
     "init": "^0.1.2",
-    "sqlite": "^5.0.1"
+    "openai": "^4.6.0",
+    "sqlite": "^5.0.1",
+    "zod": "^3.22.2"
   }
 }
